--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <title>Florine DAUMAS</title>
 </head>
 <body>
-    
+    <header>
+        <h1>MY PROJECTS</h1>
+        <p>Discover what I've done</p>
+    </header>
+    <main>
+        <section class="Android">
+            <h2>Android apps</h2>
+        </section>
+        <section class="Library">
+            <h2>GUI Library for Processing</h2>
+        </section>
+    </main>
 </body>
 </html>
