--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet" />
     <title>Florine DAUMAS</title>
 </head>
 <body>
@@ -10,11 +11,14 @@
         <p>Discover what I've done</p>
     </header>
     <main>
-        <section class="Android">
+        <section class="android">
             <h2>Android apps</h2>
         </section>
-        <section class="Library">
+        <section class="library">
             <h2>GUI Library for Processing</h2>
+        </section>
+        <section class="other">
+            <h2>Other projects</h2>
         </section>
     </main>
 </body>
