--- a/index.html
+++ b/index.html
@@ -11,13 +11,26 @@
         <p>Discover what I've done</p>
     </header>
     <main>
-        <section class="android">
-            <h2>Android apps</h2>
+        <section class="android" id="androidapps">
+            <img src="data/code.png" alt="photo code">
+            <div class="textinfo">
+                <h2>Android apps</h2>
+                <p>All of my mobile games for android</p>
+            </div>
+            
         </section>
-        <section class="library">
+        <section class="library" id="library">
             <h2>GUI Library for Processing</h2>
         </section>
-        <section class="other">
+        <section class="nourrichat" id="nourrichat">
+            <img src="data/nourrichat-logo.png" alt="logo Nourrichat">
+            <div class="textinfo">
+                <h2>Nourrichat</h2>
+                <p>A machine to give water and food automatically to your cat</p>
+            </div>
+            
+        </section>
+        <section class="other" id="otherprojects">
             <h2>Other projects</h2>
         </section>
     </main>
