--- a/index.html
+++ b/index.html
@@ -16,19 +16,23 @@
             <div class="textinfo">
                 <h2>Android apps</h2>
                 <p>All of my mobile games for android</p>
+                <a href="android.html" class="learnmore">Learn more</a>
             </div>
-            
         </section>
         <section class="library" id="library">
-            <h2>GUI Library for Processing</h2>
+            <div class="textinfo">
+                <h2>GUI Library for Processing</h2>
+                <p>A library to implement UI elements to processing sketches</p>
+                <a href="library.html" class="learnmore">Learn more</a>
+            </div>
         </section>
         <section class="nourrichat" id="nourrichat">
             <img src="data/nourrichat-logo.png" alt="logo Nourrichat">
             <div class="textinfo">
                 <h2>Nourrichat</h2>
                 <p>A machine to give water and food automatically to your cat</p>
-            </div>
-            
+                <a href="nourrichat.html" class="learnmore">Learn more</a>
+            </div>    
         </section>
         <section class="other" id="otherprojects">
             <h2>Other projects</h2>
