--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <div class="textinfo">
                 <h2>Android apps</h2>
                 <p>All of my mobile games for android</p>
-                <a href="android.html" class="learnmore">LEARN MORE</a>
+                <a href="android.html" class="learnmore">LEARN MORE <i class="arrow"> </i></a>
             </div>
         </section>
         <section class="library" id="library">
             <div class="textinfo">
                 <h2>GUI Library for Processing</h2>
                 <p>A library to implement UI elements to processing sketches</p>
-                <a href="library.html" class="learnmore">LEARN MORE</a>
+                <a href="library.html" class="learnmore">LEARN MORE <i class="arrow"> </i></a>
             </div>
             <img src="data/library.png" alt="library illustration">
         </section>
@@ -32,7 +32,7 @@
             <div class="textinfo">
                 <h2>Nourrichat</h2>
                 <p>A machine to give water and food automatically to your cat</p>
-                <a href="nourrichat.html" class="learnmore">LEARN MORE</a>
+                <a href="nourrichat.html" class="learnmore">LEARN MORE <i class="arrow"> </i></a>
             </div>    
         </section>
         <section class="other" id="otherprojects">
