--- a/android.html
+++ b/android.html
@@ -2,9 +2,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="stylesheets/android-style.css" rel="stylesheet" />
     <title>Android apps</title>
 </head>
 <body>
    <h1>My Apps for Android</h1>
+   <ul>
+        <li><a href="#swimmy-fish">Swimmy Fish</a></li>
+        <li><a href="#morpion">Tic Tac Toe (Morpion)</a></li>
+        <li><a href="#yams">Yam's</a></li>
+        <li><a href="#demineur">Mine Sweaper (Démineur)</a></li>
+        <li><a href="#pong">Pong</a></li>
+        <li><a href="#tapetaupe">Whac a Mole (Tape Taupe)</a></li>
+   </ul>
+   <section id="#swimmy-fish">
+    <h2>Swimmy Fish</h2>
+    <p>A mobile app based on "Flappy Bird"</p>
+   </section>
+   
+   <section id="#morpion">
+    <h2>Tic Tac Toe</h2>
+    <p>The famous game playable on mobile</p>
+   </section>
+
+   <section id="#yams">
+    <h2>Yam's</h2>
+    <p>The good old dice game to play by yourself on your mobile</p>
+   </section>
+
+   <section id="#demineur">
+    <h2>Mine Sweaper</h2>
+    <p>Find the mines but don't dig them up or you lose</p>
+   </section>
+
+   <section id="#pong">
+    <h2>Pong</h2>
+    <p>The classic of arcade games playable on mobile</p>
+   </section>
+
+   <section id="#tapetaupe">
+    <h2>Whac a Mole</h2>
+    <p>Hit the moles as soon as they show up or you lose</p>
+   </section>
+   
+
 </body>
 </html>
