--- a/nourrichat.html
+++ b/nourrichat.html
@@ -6,5 +6,16 @@
 </head>
 <body>
     <h1>Nourrichat</h1> <!--add link to french version-->
+    <!--<video controls src="https://www.dailymotion.com/embed/video/x8r5jkt"></video>-->
+    <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;"> 
+        <iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" 
+        frameborder="0" 
+        type="text/html" 
+        src="https://www.dailymotion.com/embed/video/x8r5jkt" 
+        width="100%" 
+        height="100%" 
+        allowfullscreen 
+        title="Presentation Nourrichat" allow="autoplay"> </iframe> 
+    </div>
 </body>
 </html>
