--- a/android.html
+++ b/android.html
@@ -17,34 +17,33 @@
    </ul>
    <section id="#swimmy-fish">
     <h2>Swimmy Fish</h2>
-    <p>A mobile app based on "Flappy Bird"</p>
+    <p>A mobile app based on "Flappy Bird" <br/>Source code: <a href="https://github.com/flodms/swimmy_fish" target="_blank">here</a></p>
    </section>
-   
+
    <section id="#morpion">
     <h2>Tic Tac Toe</h2>
-    <p>The famous game playable on mobile</p>
+    <p>The famous game playable on mobile<br/>Source code: <a href="https://github.com/flodms/morpion" target="_blank">here</a></p>
    </section>
 
    <section id="#yams">
     <h2>Yam's</h2>
-    <p>The good old dice game to play by yourself on your mobile</p>
+    <p>The good old dice game to play by yourself on your mobile<br/> Source code: <a href="https://github.com/flodms/yams" target="_blank">here</a></p>
    </section>
 
    <section id="#demineur">
     <h2>Mine Sweaper</h2>
-    <p>Find the mines but don't dig them up or you lose</p>
+    <p>Find the mines but don't dig them up or you lose<br/> Source code: <a href="https://github.com/flodms/demineur" target="_blank">here</a></p>
    </section>
 
    <section id="#pong">
     <h2>Pong</h2>
-    <p>The classic of arcade games playable on mobile</p>
+    <p>The classic of arcade games playable on mobile<br/> Source code: <a href="https://github.com/flodms/pong" target="_blank">here</a></p>
    </section>
 
    <section id="#tapetaupe">
     <h2>Whac a Mole</h2>
-    <p>Hit the moles as soon as they show up or you lose</p>
+    <p>Hit the moles as soon as they show up or you lose<br/> Source code: <a href="https://github.com/flodms/tape_taupe" target="_blank">here</a></p>
    </section>
    
-
 </body>
 </html>
