little changes in text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img src="data/nourrichat-logo.png" alt="logo Nourrichat">
             <div class="textinfo">
                 <h2>Nourrichat</h2>
-                <p>A machine to give water and food automatically to your cat</p>
+                <p>A machine to automatically deliver water and food to your cat</p>
                 <a href="nourrichat.html" class="learnmore">LEARN MORE <i class="arrow"> </i></a>
             </div>    
         </section>
