--- a/android.html
+++ b/android.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="stylesheets/android-style.css" rel="stylesheet" />
-    <title>Android apps</title>
+    <title>Android apps - Florine DAUMAS</title>
 </head>
 <body>
    <h1>My Apps for Android</h1>
