--- a/nourrichat.html
+++ b/nourrichat.html
@@ -2,12 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nourrichat - Florine DAUMAS</title>
 </head>
 <body>
     <h1>Nourrichat</h1> <!--add link to french version-->
     <!--<video controls src="https://www.dailymotion.com/embed/video/x8r5jkt"></video>-->
-    <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;"> 
+    <div id="nourrichat-video" style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;"> 
         <iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" 
         frameborder="0" 
         type="text/html" 
@@ -15,7 +15,8 @@
         width="100%" 
         height="100%" 
         allowfullscreen 
-        title="Presentation Nourrichat" allow="autoplay"> </iframe> 
+        title="Presentation Nourrichat"> </iframe> 
     </div>
+
 </body>
 </html>
