changed library page name

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="textinfo">
                 <h2>GUI Library for Processing</h2>
                 <p>A library to implement UI elements to processing sketches</p>
-                <a href="library.html" class="learnmore">LEARN MORE <i class="arrow"> </i></a>
+                <a href="UILib.html" class="learnmore">LEARN MORE <i class="arrow"> </i></a>
             </div>
             <img src="data/library.png" alt="library illustration">
         </section>
