--- a/android.html
+++ b/android.html
@@ -19,37 +19,48 @@
         <div id="#swimmy-fish">
             <h2>Swimmy Fish</h2>
             <p>A mobile app based on "Flappy Bird"</p>
-            <video src="data/sf-video.mp4"></video>
+            <video autoplay muted>
+                <source src="data/sf-video.mp4" type="video/mp4">
+            </video>
             <a href="https://github.com/flodms/swimmy_fish" target="_blank">View source code</a>
         </div>
 
         <div id="#morpion">
             <h2>Tic Tac Toe</h2>
             <p>The famous game playable on mobile</p>
+            <video autoplay muted>
+                <source src="data/morpion-video.mp4" type="video/mp4">
+            </video>
             <a href="https://github.com/flodms/morpion" target="_blank">View source code</a>
         </div>
 
         <div id="#yams">
             <h2>Yam's</h2>
             <p>The good old dice game to play by yourself on your mobile</p>
+            <video src="data/" autoplay muted></video>
             <a href="https://github.com/flodms/yams" target="_blank">View source code</a>
         </div>
 
         <div id="#demineur">
             <h2>Mine Sweaper</h2>
             <p>Find the mines but don't dig them up or you lose</p>
+            <video src="data/demineur-video.mp4" autoplay muted></video>
             <a href="https://github.com/flodms/demineur" target="_blank">View source code</a>
         </div>
 
         <div id="#pong">
             <h2>Pong</h2>
             <p>The classic of arcade games playable on mobile</p>
+            <video src="data/pong-video.mp4" autoplay muted></video>
             <a href="https://github.com/flodms/pong" target="_blank">View source code</a>
         </div>
 
         <div id="#tapetaupe">
             <h2>Whac a Mole</h2>
             <p>Hit the moles as soon as they show up or you lose</p>
+            <video src="data/tapetaupe-video.mp4" autoplay muted loop>
+                <source src="data/tapetaupe-video.mp4" type="video/mp4">
+            </video>
             <a href="https://github.com/flodms/tape_taupe" target="_blank">View source code</a>
         </div>
     </section>
