added yams video

--- a/android.html
+++ b/android.html
@@ -37,7 +37,7 @@
         <div id="#yams">
             <h2>Yam's</h2>
             <p>The good old dice game to play by yourself on your mobile</p>
-            <video src="data/" autoplay muted></video>
+            <video src="data/yams-video.mp4" autoplay muted></video>
             <a href="https://github.com/flodms/yams" target="_blank">View source code</a>
         </div>
 
