rotate pong video

--- a/android.html
+++ b/android.html
@@ -51,7 +51,7 @@
         <div id="#pong">
             <h2>Pong</h2>
             <p>The classic of arcade games playable on mobile</p>
-            <video src="data/pong-video.mp4" autoplay muted loop></video>
+            <video src="data/pong-video.mp4" autoplay muted loop class="landscape-video"></video>
             <a href="https://github.com/flodms/pong" target="_blank">View source code</a>
         </div>
 
