add link to processing.org

--- a/android.html
+++ b/android.html
@@ -6,7 +6,8 @@
     <title>Android apps - Florine DAUMAS</title>
 </head>
 <body>
-   <h1>My Apps for Android</h1>
+   <h1>My Apps for Android<br><span>Made with <a href="https://processing.org" target="_blank">Processing</a></span></h1>
+
    <!--<ul>
         <li><a href="#swimmy-fish">Swimmy Fish</a></li>
         <li><a href="#morpion">Tic Tac Toe (Morpion)</a></li>
