--- a/android.html
+++ b/android.html
@@ -22,6 +22,7 @@
             <p>A mobile app based on "Flappy Bird"</p>
             <video autoplay muted loop>
                 <source src="data/sf-video.mp4" type="video/mp4">
+                video is loading...
             </video>
             <a href="https://github.com/flodms/swimmy_fish" target="_blank">View source code</a>
         </div>
@@ -31,6 +32,7 @@
             <p>The famous game playable on mobile</p>
             <video autoplay muted loop>
                 <source src="data/morpion-video.mp4" type="video/mp4">
+                video is loading...
             </video>
             <a href="https://github.com/flodms/morpion" target="_blank">View source code</a>
         </div>
@@ -38,21 +40,21 @@
         <div id="#yams">
             <h2>Yam's</h2>
             <p>The good old dice game to play by yourself on your mobile</p>
-            <video src="data/yams-video.mp4" autoplay muted loop></video>
+            <video src="data/yams-video.mp4" autoplay muted loop>video is loading...</video>
             <a href="https://github.com/flodms/yams" target="_blank">View source code</a>
         </div>
 
         <div id="#demineur">
             <h2>Mine Sweaper</h2>
             <p>Find the mines but don't dig them up or you lose</p>
-            <video src="data/demineur-video.mp4" autoplay muted loop></video>
+            <video src="data/demineur-video.mp4" autoplay muted loop>video is loading...</video>
             <a href="https://github.com/flodms/demineur" target="_blank">View source code</a>
         </div>
 
         <div id="#pong">
             <h2>Pong</h2>
             <p>The classic of arcade games playable on mobile</p>
-            <video src="data/pong-video.mp4" autoplay muted loop class="landscape-video"></video>
+            <video src="data/pong-video.mp4" autoplay muted loop class="landscape-video">video is loading...</video>
             <a href="https://github.com/flodms/pong" target="_blank">View source code</a>
         </div>
 
@@ -61,6 +63,7 @@
             <p>Hit the moles as soon as they show up or you lose</p>
             <video src="data/tapetaupe-video.mp4" autoplay muted loop>
                 <source src="data/tapetaupe-video.mp4" type="video/mp4">
+                video is loading...
             </video>
             <a href="https://github.com/flodms/tape_taupe" target="_blank">View source code</a>
         </div>
