changed android photo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <section class="android" id="androidapps">
-            <img src="data/code.png" alt="photo code">
+            <img src="data/android.png" alt="android app">
             <div class="textinfo">
                 <h2>Android apps</h2>
                 <p>All of my mobile games for android</p>
