--- a/nourrichat.html
+++ b/nourrichat.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Nourrichat</h1> <!--add link to french version-->
 
-    <p>The Nourrichat is an automatic food and water dispenser for cats or any same-sized animal. It can be used for everyday life or only when you go on holiday so that your cat can be fed automatically. It also has Android and PC apps which allow you to control its parameters and see the remaining food and water in its containers.</p>
+    <p style="font-size:large;font-family :Arial, Helvetica, sans-serif;">The Nourrichat is an automatic food and water dispenser for cats or any same-sized animal. It can be used for everyday life or only when you go on holiday so that your cat can be fed automatically. It also has Android and PC apps which allow you to control its parameters and see the remaining food and water in its containers.</p>
     <div id="nourrichat-video" style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;"> 
         <iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" 
         frameborder="0" 
